Adding rest call to account client.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate-ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
+#Account
+account.base.url=http://localhost:8080/tf/service/account
+account.credit.endpoint=${account.base.url}/balance/credit
+account.debit.endpoint=${account.base.url}/balance/debit
 
 
