Exposing transactions data.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Spring
 server.port=8085
-server.servlet.context-path=/tf/service/transaction
+server.servlet.context-path=/transaction-service/v1/api
 spring.application.name=transaction-management-service
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
@@ -19,7 +19,7 @@ spring.jpa.hibernate-ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 #Account
-account.base.url=http://localhost:8080/tf/service/account
+account.base.url=http://localhost:8080/account-service/v1/api
 account.credit.endpoint=${account.base.url}/balance/credit
 account.debit.endpoint=${account.base.url}/balance/debit
 
