--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,13 @@ dependencies {
 	//Spring
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	//Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
+
+	//Iban
+	implementation 'org.iban4j:iban4j:3.2.7-RELEASE'
 
 	//Lombok
 	compileOnly 'org.projectlombok:lombok'
